@@ -1,5 +1,12 @@
 2008-12-04  Scott Ellington  <scott.ellington@gmail.com>
 
+	* Layer.cs:
+	* Feature.cs:
+	* Xml/Serialization/MapSerializer.cs: add Layer.LabelField and
+	Feature.LabelFieldValue
+
+2008-12-04  Scott Ellington  <scott.ellington@gmail.com>
+
 	* Style.cs:
 	* Drawing/MapDrawer.cs:
 	* Data/KeyholeMarkupLanguage.cs:
